--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -49,23 +49,26 @@
                 </a>
 
                 @*<a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="View Detail" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                <i class="fas fa-money-bill"></i>
-            </a>*@
+            <i class="fas fa-money-bill"></i>
+        </a>*@
 
                 @*<a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1"></a>*@
                 @*}
-            @if (privilege != null && privilege.Edit)
-            {*@
+        @if (privilege != null && privilege.Edit)
+        {*@
                 @*<a href="#" class="btn btn-sm btn-outline-success data-item-download" title="Download" id="rptType" name="rptType" data-item-download="@item.ProductSalesInfoId" style="line-height:1">
 
-                <i class="fas fa-download"></i>
-            </a>*@
+            <i class="fas fa-download"></i>
+        </a>*@
 
                 <a href="@Url.Action("AgroProductSalesReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
 
                 <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Challan">
                     <i class="fa-solid fa-receipt"></i>
                 </a>
+                <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Drop Invoice">
+                    <i class="fa-solid fa-droplet"></i>
+                  </a>
 
 
 
