--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -67,8 +67,7 @@
                     <i class="fa-solid fa-receipt"></i>
                 </a>
                 <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Drop Invoice">
-                    <i class="fa-solid fa-droplet"></i>
-                  </a>
+                    <i class="fas fa-tint"></i></a>
 
 
 
