--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -402,7 +402,12 @@
         })
         $(document).on('click', 'a.data-item-download', function (e) {
             e.preventDefault();
-            window.open("/AgroConfiguration/AgroProductSalesInvoiceDropReports?ProductSalesInfoId=" + ProductSalesInfoId.val());
+            if (bootbox.confirm("Are you sure you want to delete?", function (result) {
+                if (result === true) {
+                    window.open("/AgroConfiguration/AgroProductSalesInvoiceDropReports?ProductSalesInfoId=" + ProductSalesInfoId.val());
+                };
+            }));
+           
         })
 
 
