--- a/ERPWeb/Views/AgroConfiguration/UpdateRequistion.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/UpdateRequistion.cshtml
@@ -112,7 +112,7 @@
 
         $(document).ready(function () {
 
-            alert("hello");
+            //alert("hello");
            
 
         })
